--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -118,3 +118,27 @@
 #- name: scan for parent/child relationships
 #  command: su -c "cmk --scan-parents" -l {{omdistro_site}}
 #  when: omdistro_scan_parents
+
+- name: create wato file
+  file: path=/opt/omd/sites/{{ omdistro_site }}/etc/check_mk/conf.d/wato/hosts.mk owner={{ omdistro_site }} group={{ omdistro_site }} mode=0644 state=touch
+  become: yes
+  become_user: root
+  tags:
+    - omd
+
+- name: Check if add_to_check_mk is already copied to {{ omdistro_server }}.
+  stat: path=/usr/local/bin/add_to_check_mk.sh
+  register: omd_check_mk_file
+  become: yes
+  become_user: root
+  tags:
+    - omd
+
+- name: copy add_to_check_mk.sh script to omd {{ omdistro_server }}
+  copy: src=add_to_check_mk.sh dest=/usr/local/bin/add_to_check_mk.sh mode=0755 
+  #when: (omd_check_mk_file.stat.exists == false)
+  become: yes
+  become: yes
+  become_user: root
+  tags:
+    - omd
